--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 appdirs
-aria2p
+git+https://github.com/Anshusharma75/jhamak
 beautifulsoup4
 google-api-python-client
 google-auth-httplib2
@@ -13,7 +13,7 @@ pybase64
 hachoir
 pillow
 filesplit
-speedtest-cli
+git+https://github.com/Anshusharma75/jati
 cfscrape
 Pyrogram==0.18.0
 python-dotenv
@@ -23,4 +23,4 @@ requests
 telegraph
 tenacity
 TgCrypto
-youtube_dl
+git+https://github.com/Anshusharma75/gandusaala
