--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-BOT_TOKEN = "5169998531:AAGaf5ZX77iovrwrBN62WMEtwZzep_3snuI"
+BOT_TOKEN = "5169998531:AAEvz7vkOvCAN7J0LYuxYZsp15ziXuFofvk"
 GDRIVE_FOLDER_ID = "1LP2DrXVTujX0EqaBszw8gOwA-lpRq7lA"
 OWNER_ID = "5042525177"
 DOWNLOAD_DIR = "/home/username/mirror-bot/downloads"
@@ -15,7 +15,7 @@ TOKEN_PICKLE_URL = "" #Enter Direct Links TO Import Credentials Directly From Ur
 AUTHORIZED_CHATS = "" #Separated by space
 SUDO_USERS = ""  #Separated by space
 LOGS_CHATS = "-1001521133010" #Separated by space
-DATABASE_URL = ""
+DATABASE_URL = "postgres://bntncpfr:fQp-XTM_-aYg72gfeB9Fedby-3VR_LUc@manny.db.elephantsql.com/bntncpfr"
 IGNORE_PENDING_REQUESTS = "True"
 INDEX_URL = "https://root.sohom-roy.workers.dev/0:"
 MEGA_KEY = "783hf8"
