--- a/config_sample.env
+++ b/config_sample.env
@@ -1,4 +1,4 @@
-#Remove this line before deployingorh
+gegr#Remove this line before deployingorh
 _____REMOVE_THIS_LINE_____=True
 
 # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
