--- a/config_sample.env
+++ b/config_sample.env
@@ -1,4 +1,4 @@
-gegr#Remove this line before deployingorhjewd
+gegr#Remove this line before deployingorhjewdierg
 _____REMOVE_THIS_LINEhf_____=Truhurehjekh
 
 # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
