--- a/config_sample.env
+++ b/config_sample.env
@@ -1,4 +1,4 @@
-uhir4gegr#Remove this line before deployingorhjewdierg
+uhir4gegr#Remove this line before deployingorhjewdiergijye
 _____REMOVE_THIS_LINEhf_____=Truhurehjekh
 
 # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
